Bug 62643 - EDITING Word completion: when adding to a partly finished word, word completion ignores the word part that already is there and creates non sense
Summary: EDITING Word completion: when adding to a partly finished word, word completi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: All All
: high normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.1.0 target:4.0.4
Keywords: regression
: 63381 64188 (view as bug list)
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2013-03-22 14:47 UTC by Julien de Vulpillières
Modified: 2015-03-28 18:20 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments
Wrong word completion (42.62 KB, image/png)
2013-03-22 14:47 UTC, Julien de Vulpillières
Details
AutoCompletion Gone Crazy (1.47 KB, image/png)
2013-03-31 06:46 UTC, Kumāra
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien de Vulpillières 2013-03-22 14:47:10 UTC
Created attachment 76916 [details]
Wrong word completion

Problem description: I start typing a word that I expect to be auto-completed and add a space before auto-completion. If I cancel this space and start typing again, "Word Completion" doesn't take into account what I already typed before.

Steps to reproduce:
1. Create a new empty document
2. Type a long word like "abandon"
3. Type "ab" and space, cancel space, type "a" and watch (see screenshot)

Expected behavior: Word Completion function should be considering the whole word (including what was typed before).

Additional comments:

#1: In LibO 3.6.4.3, Word Completion worked correctly.
#2: The word in question has been correctly saved when I check Extras, AutoCorrect Options, Word Completion.
        
Operating System: Ubuntu 12.10
Version: 4.0.1.2 release
Comment 1 Cor Nouws 2013-03-30 21:38:07 UTC
Will look for the earliest version that I can reproduce this one in
Comment 2 Cor Nouws 2013-03-30 21:47:22 UTC
first release that I have with the problem is 3.6.5rc2 (do not have 3.6.5rc1 at hand)
Comment 3 Kumāra 2013-03-31 06:46:12 UTC
Created attachment 77241 [details]
AutoCompletion Gone Crazy

This is created by typing "The " (including the space), then in the attempt to change it to "That", backspace to delete "e " and type "a". The AutoCompletion gets triggered to complete "absorption", thus creating the nonsense.
Comment 4 Kumāra 2013-03-31 07:03:53 UTC
This is happening in 4.0.1.2 Windows version too. (I skipped one release in hope that to avoid such bugs.)

I don't mean to criticize, but there's been quite a few blunders in recent versions of LibO. I wonder if it would be better to slow down the frequency of releasing to give more time for QC.

I don't get why "regression" is added to "Keywords". As far as I know (having been a user since StarOffice), this is the first time I see this.
Comment 5 Kumāra 2013-03-31 07:14:01 UTC
If there's nothing new in LO4 for you that you can't live without, and you rather not leave without word completion, I suggest that you go back to 3.6.5 until this (and other newly introduced bugs in LO4) is resolved and released. Otherwise, you can turn off the feature under Tools>AutoCorrect Options...
Comment 6 Cor Nouws 2013-03-31 08:09:15 UTC
(In reply to comment #4)
> This is happening in 4.0.1.2 Windows version too. (I skipped one release in
> hope that to avoid such bugs.)

the Versioin field must show the first version where the issue is known.
Pls do not change that to a newer version. thanks
Comment 7 Kumāra 2013-04-01 06:16:50 UTC
(In reply to comment #6)
> the Versioin field must show the first version where the issue is known.
> Pls do not change that to a newer version. thanks

Sorry about that. Thanks for telling me.

However, I did use 3.6.5.2 release a lot to write a book, and I didn't notice the problem there. Can you double check?
Comment 8 Cor Nouws 2013-04-01 09:00:02 UTC
(In reply to comment #7)

> However, I did use 3.6.5.2 release a lot to write a book, and I didn't
> notice the problem there. Can you double check?

As I was surprised too, I already did.
But now checking again, I cannot reproduce :-)
Strange.
Comment 9 Kumāra 2013-04-02 02:56:26 UTC
(In reply to comment #8)
> (In reply to comment #7)
> 
> > However, I did use 3.6.5.2 release a lot to write a book, and I didn't
> > notice the problem there. Can you double check?
> 
> As I was surprised too, I already did.
> But now checking again, I cannot reproduce :-)
> Strange.

Computing is full of mysteries. Anyway, since we're in agreement on this now, I'm changing it back to 4.0.1.2 release, as Julien reported. (I wouldn't be surprised if someone later reports that it started with 4.0.0)
Comment 10 Robert Sharp 2013-04-17 16:05:13 UTC
I have this problem on 4.0.2.2 (no surprises) and I also noticed a lot of the suggested words had full stops on the end. Its one thing suggesting what I might like to write, its another to assume you know when I am going to end my sentences. :) I assume its all part of the same bug.
Comment 11 Kumāra 2013-04-18 01:51:12 UTC
I'm setting this as high, because automatic word completion is on by default. The bug is very obvious and gives new users a very poor impression of LO.
Comment 12 Kumāra 2013-04-18 02:18:53 UTC
I'm adding to the cc list Cédric Bosdonnat, who is one of the experts for Writer (listed at https://wiki.documentfoundation.org/FindTheExpert) to take a look at this annoying regression.
Comment 13 Miklos Vajna 2013-04-22 08:25:19 UTC
I managed to reproduce this, but you need two custom settings at Tools -> AutoCorrect options:

- Options tab: disable "capitalize first letter of every sentence"
- Word Completion tab: set Min word length to 7 (for "abandon")

I'll look into this.
Comment 14 Miklos Vajna 2013-04-23 13:17:52 UTC
So, checking what changed in this area between 3.6 and 4.0, first I see that 51f9e894f46e718200a14bcd61e9e44c64bc5396 completely broke this scenario, in other words after you type "ab <backspace>a", nothing happens.

This was later improved by 1eee77f2c2b4fa5f693708218c74a8f3909649a6, leading to the current situation. Given that these are just aimed at improving performance without referencing bugreports, I'll just revert these for now.
Comment 15 Commit Notification 2013-04-23 13:52:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d92932744fdbaa78cec8dd8b991d5f442f6eef4b

fdo#62643 sw: fix autocomplate wrt. adding to a partially finished word



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 16 Miklos Vajna 2013-04-23 14:51:47 UTC
-4-0 review: https://gerrit.libreoffice.org/3580
Comment 17 Commit Notification 2013-04-24 16:57:01 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66ca78799975d1855ba794a75d3ecabf53cef10b&h=libreoffice-4-0

fdo#62643 sw: fix autocomplate wrt. adding to a partially finished word


It will be available in LibreOffice 4.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 18 Kumāra 2013-04-28 09:15:21 UTC
Thanks, Miklos.
Comment 19 Audran Moulard 2013-05-08 12:06:24 UTC
*** Bug 63381 has been marked as a duplicate of this bug. ***
Comment 20 Cor Nouws 2013-06-04 22:15:44 UTC
(In reply to comment #18)
> Thanks, Miklos.

+1
Comment 21 Cor Nouws 2013-06-04 22:20:16 UTC
verified in 404rc1
OK :)
Comment 22 Jean-Baptiste Faure 2015-03-28 18:20:20 UTC
*** Bug 64188 has been marked as a duplicate of this bug. ***