fdo#62643 sw: fix autocomplate wrt. adding to a partially finished word

This partially reverts commits 1eee77f2c2b4fa5f693708218c74a8f3909649a6
and 51f9e894f46e718200a14bcd61e9e44c64bc5396.

Change-Id: Ie6a1202e139a0eb30cac482a2bb528ef70c7797f