sw/inc/acmplwrd.hxx
@@ -68,21 +68,8 @@ public:
 
     void CheckChangedList(const editeng::SortedAutoCompleteStrings& rNewLst);
 
-    // Resets the current position within the tree to its root node.
-    void returnToRoot();
-
-    // Advances to a given node within the AutoComplete tree.
-    void gotoNode(OUString sNode);
-
-    // Advances from the current position towards the node keyed with cKey.
-    void advance(const sal_Unicode cKey);
-
-    // Goes back one char within the tree, except if the current node is already the root node.
-    void goBack();
-
-    // Returns all words matching a given prefix aMatch. If bIgnoreCurrentPos is set, the current
-    // position within the tree is ignored and replaced by aMatch.
-    bool GetWordsMatching(String aMatch, std::vector<String>& aWords, bool bIgnoreCurrentPos) const;
+    // Returns all words matching a given prefix aMatch.
+    bool GetWordsMatching(String aMatch, std::vector<String>& aWords) const;
 };
 
 
